[fix] mockup scroll and blurred header

--- a/styles/_mockup.scss
+++ b/styles/_mockup.scss
@@ -1,41 +1,50 @@
 #mockup {
-	background-color: #fff;
-	border: 10px solid #fff;
-	border-radius: 43px;
-	box-shadow: 30px -30px 200px #46116e;
-	box-sizing: border-box;
+	align-items: center;
+	display: flex;
 	height: 600px;
-	margin: 0 auto;
-	position: relative;
-	width: 277px;
-	transform: scale(1);
+	overflow-x: hidden;
+	width: 100vw;
 
-	&::before {
-		background: linear-gradient(90deg, #6c209c 0%, #44d3ef 100%);
-		border-radius: 200px;
-		content: "";
-		display: block;
-		height: 400px;
-		left: -50px;
-		mix-blend-mode: overlay;
-		opacity: 0.5;
-		position: absolute;
-		top: 100px;
-		width: 400px;
-		z-index: 1;
-	}
+	&__body {
+		background-color: #fff;
+		border: 10px solid #fff;
+		border-radius: 43px;
+		box-shadow: 30px -30px 50px #46116e;
+		box-sizing: border-box;
+		height: 600px;
+		margin: 0 auto;
+		position: relative;
+		width: 277px;
+		z-index: 10;
+		transform: rotate(8.25deg) scale(0.8);
 
-	&::after {
-		background-image: url(/twis-demo-image.png);
-		background-position: center center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		border-radius: 38px;
-		content: "";
-		display: block;
-		height: 100%;
-		position: absolute;
-		width: 100%;
-		z-index: 2;
+		&::before {
+			background: linear-gradient(90deg, #6c209c 0%, #44d3ef 100%);
+			border-radius: 200px;
+			content: "";
+			display: block;
+			height: 400px;
+			left: -50px;
+			mix-blend-mode: overlay;
+			opacity: 0.5;
+			position: absolute;
+			top: 100px;
+			width: 400px;
+			z-index: 1;
+		}
+
+		&::after {
+			background-image: url(/twis-demo-image.png);
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			border-radius: 38px;
+			content: "";
+			display: block;
+			height: 100%;
+			position: absolute;
+			width: 100%;
+			z-index: 2;
+		}
 	}
 }
